# Eye_in_hand_Periode2.4_C2

./: .gitignore  README.md  licence.md
.github/workflows/: documentation.yml
documentation/: conf.py  index.rst
documentation/documentation/: demo_programms.md  faq.md  gazebo.md  install.md  migrating.md  overview.md  real_robot.md  robotic.md  robotiq.md  setup_assistant.md  simulation.md  teachbot.md  virtual_environment.md
hmi_package/: package.xml  setup.cfg  setup.py
install/: install.bash
manipulator_package/: package.xml  setup.py
migrate/: migrate.bash
my_demo_cpp/src/: my_demo_cpp_node.cpp
my_ur/: CMakeLists.txt
my_ur_actions/: CMakeLists.txt
my_ur_actions/action/: RobotMovement.action
my_ur_bringup/: CMakeLists.txt  package.xml  setup.py
my_ur_bringup/launch/: demo.launch.py  load_robot_description.launch.py  movegroup.launch.py  moveit.launch.py  real_robot.launch.py  simulation.launch.py  ur5e_bringup.launch.py  ur5e_bringup_sim.launch.py
my_ur_demo/: setup.cfg  setup.py
my_ur_demo/my_ur_demo/: demo.py
my_ur_demo_cpp/: CMakeLists.txt
my_ur_demo_cpp/src/: demo.cpp
my_ur_description/: CMakeLists.txt
my_ur_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
my_ur_gazebo/launch/: bringup.launch.py  bringup_control.launch.py  my_ur_moveit.launch.py
my_ur_gazebo/test/: test_description.py  test_gz.py
my_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_ur_teachbot/: README.md  package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  (+4 more)
transportband_package/: package.xml  setup.cfg  setup.py
(+141 files in other folders)
