cmake_minimum_required(VERSION 3.5)
project(my_ur_gazebo)

find_package(ament_cmake REQUIRED)

# Default to off as starting gzsim doesn't shut down correctly at the moment
option(
  UR_SIM_INTEGRATION_TESTS
  "Run my_ur_gazebo integration tests"
  OFF
)

install(DIRECTORY config launch urdf rviz
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(launch_testing_ament_cmake)
  find_package(ament_cmake_pytest REQUIRED)

  if(${UR_SIM_INTEGRATION_TESTS})
    add_launch_test(test/test_gz.py
      TIMEOUT
        180
    )
  endif()
  ament_add_pytest_test(description test/test_description.py)
endif()

ament_package()
